--- a/src/app/config/config.page.html
+++ b/src/app/config/config.page.html
@@ -22,13 +22,16 @@
     <ion-label class="font" style="font-size: 14px;"><b>Dados pessoais</b></ion-label>
   </div>
   <div class="item-input">
-    <ion-input class="input-cadastro" type="text" name="nome" placeholder="{{ userData.objeto.nome }}"></ion-input>
+    Nome<ion-input class="input-cadastro" type="text"[(ngModel)]="nome" name="nome" value="{{ userData.objeto.nome }}" placeholder="{{ userData.objeto.nome }}"></ion-input>
   </div>
   <div class="item-input">
-    <ion-input class="input-cadastro" type="text" name="nome" placeholder="{{ userData.objeto.cpf }}"></ion-input>
+    RG<ion-input class="input-cadastro" type="text" [(ngModel)]="rg" name="rg" value="{{ userData.objeto.rg }}" placeholder="{{ userData.objeto.rg }}"></ion-input>
   </div>
   <div class="item-input">
-    <ion-input class="input-cadastro" type="text" name="nome" placeholder="{{ userData.objeto.telefone }}"></ion-input>
+    CPF<ion-input class="input-cadastro" type="text" [(ngModel)]="cpf" name="cpf" value="{{ userData.objeto.cpf }}" placeholder="{{ userData.objeto.cpf }}"></ion-input>
+  </div>
+  <div class="item-input">
+    Telefone<ion-input class="input-cadastro" type="text" [(ngModel)]="telefone" name="telefone" value="{{ userData.objeto.telefone }}" placeholder="{{ userData.objeto.telefone }}"></ion-input>
   </div>
   <div class="item-input">
     Pontos: {{ userData.objeto.pontos }}
@@ -37,13 +40,13 @@
     <ion-label class="font" style="font-size: 14px;"><b>Distância de busca</b></ion-label>
   </div>
   <ion-item>
-    <ion-range min="1" max="10" [(ngModel)]="distancia" pin="true" color="secondary">
+    <ion-range min="1" max="10" (ionBlur)="alterarDistancia()" [(ngModel)]="distancia" pin="true" color="secondary">
       <ion-label slot="start">1 Km</ion-label>
       <ion-label slot="end">10 Km</ion-label>
     </ion-range>
   </ion-item>
   <div class="item-label" style="margin: 0 1rem 1rem;">
     <ion-button style="width: 100%; height: 3rem; font-size: 12px; -webkit-appearance: none;" 
-      type="submit" class="btn-default" (click)="alterarDistancia()">SALVAR</ion-button>
+      type="submit" class="btn-default" (click)="alterarDados()" >SALVAR</ion-button>
   </div>
 </ion-content>
