fix modal quiz-rating

--- a/src/app/modal-quiz/modal-quiz.page.html
+++ b/src/app/modal-quiz/modal-quiz.page.html
@@ -24,3 +24,19 @@
     </ion-row>
   </ion-row>
 </ion-content>
+
+<!-- <ion-content class="font">
+  <ion-row style="height: 25%;" class="head">
+    <div style="font-weight: bolder;">Parabéns!</div>
+    <div style="padding: 0 2rem; text-align: center;">Você ganhou [pontuacao] pontos</div>
+  </ion-row>
+  <ion-row style="height: 25%;" class="congrats-img">
+    <img class="checked-img" src="../../assets/checked.svg">
+  </ion-row>
+  <ion-row style="height: 25%;" class="congrats-text">
+    <div style="padding: 0 2rem; text-align: center;">Acesse a PGStore e troque seus pontos por prêmios!</div>
+  </ion-row>
+  <ion-row style="height: 25%;" style="place-content: center;">
+    <ion-button class="leave btn-default">Ir para PGStore</ion-button>
+  </ion-row>
+</ion-content> -->
