--- a/src/app/modal-rating/modal-rating.page.html
+++ b/src/app/modal-rating/modal-rating.page.html
@@ -1,19 +1,23 @@
 <ion-content class="font">
-  <div class="name">Avaliar - {{ ponto }}</div>
-  <div style="display: flex; justify-content: center; width: 100%;">
-    <div class="question" style="display: inline;">Conte-nos como foi sua experiência <div
-        style="display: inline; color: #00AAE2;"> :)</div>
+  <ion-row style="height: 25%;">
+    <div class="name">Avaliar - {{ ponto }}</div>
+    <div class="question" style="display: inline; text-align: center; font-size: 14px;">Conte-nos como foi sua experiência <div style="display: inline; 
+      color: #00AAE2;"> :)</div>
     </div>
-  </div>
-  <div id="awnser">
-    <ion-textarea id="text" class="font" [(ngModel)]="comentario" placeholder="Digite sua experiência" rows="4">
-    </ion-textarea>
-  </div>
-  <ion-row style="justify-content: center; width: 100%;">
-    <ion-icon name="star" *ngFor="let num of [1,2,3,4,5]" (click)="rate(num)" [ngStyle]="{'color':getColor(num)}"
-      style="width: 2rem; height: 2rem;"></ion-icon>
   </ion-row>
-  <ion-row>
+  <ion-row style="height: 15%;">
+    <ion-row style="justify-content: center; margin: 1rem 2rem;">
+      <ion-icon name="star" *ngFor="let num of [1,2,3,4,5]" (click)="rate(num)" [ngStyle]="{'color':getColor(num)}"
+        style="width: 48px; height: 48px;"></ion-icon>
+    </ion-row>
+  </ion-row>
+  <ion-row style="height: 40%;">
+    <div id="awnser">
+      <ion-textarea id="text" class="font" [(ngModel)]="comentario" placeholder="Digite sua experiência" rows="7">
+      </ion-textarea>
+    </div>
+  </ion-row>
+  <ion-row style="height: 20%;">
     <ion-row class="buttons">
       <ion-row class="btns">
         <ion-button class="font" id="btn-ask" (click)="avaliar()">Comentar</ion-button>
