--- a/src/app/modal-rating/modal-rating.page.scss
+++ b/src/app/modal-rating/modal-rating.page.scss
@@ -13,7 +13,7 @@
     display: flex;
     color: #5D4B9D;
     font-size: 1rem;
-    height: 5rem;
+    height: 3rem;
     place-items: flex-end;
     margin: 1rem;
     font-weight: bolder;
@@ -26,6 +26,7 @@
     color: black;
     font-size: 13px;
     margin: 1rem;
+    width: 100%;
 }
 
 .awnser {
@@ -48,7 +49,6 @@
     justify-content: center;
     display: flex;
     width: 100%;
-    margin: 1rem 1rem;
 }
 
 #btn-ask {
