--- a/src/app/modal-quiz/modal-quiz.page.html
+++ b/src/app/modal-quiz/modal-quiz.page.html
@@ -25,7 +25,7 @@
   </ion-row>
 </ion-content>
 
-<!-- <ion-content *ngIf="response" class="font">
+<ion-content *ngIf="response" class="font">
   <ion-row style="height: 25%;" class="head">
     <div style="font-weight: bolder;">Parabéns!</div>
     <div style="padding: 0 2rem; text-align: center;">Você ganhou {{pontuacao}} pontos</div>
@@ -39,4 +39,4 @@
   <ion-row style="height: 25%;" style="place-content: center;">
     <ion-button class="leave btn-default">Ir para PGStore</ion-button>
   </ion-row>
-</ion-content> -->
+</ion-content>
