--- a/src/app/ponto-turistico/ponto-turistico.page.html
+++ b/src/app/ponto-turistico/ponto-turistico.page.html
@@ -42,7 +42,7 @@
     <div class="header-rating">
       <ion-row>
         <ion-col id="medal">
-          <img src="../../assets/medal.png" style="width: 50px;"/>
+          <img src="../../assets/medal.svg" style="width: 50px;"/>
         </ion-col>
         <ion-col>
           <ion-row>Avaliação dos Visitantes</ion-row>
