--- a/src/app/store/store.page.html
+++ b/src/app/store/store.page.html
@@ -15,7 +15,7 @@
   <div id="text">Aqui você pode consultar todos os nossos parceiros e trocar seus pontos por experiências incríveis.</div>
   <ion-row style="margin: 1rem;">
     <ion-col class="medal">
-      <img src="../../assets/trophy.png" style="width: 50px;"/>
+      <img src="../../assets/trophy.svg" style="width: 50px;"/>
     </ion-col>
     <ion-col class="points">
       <ion-row id="my-pnts">Meus Pontos</ion-row>
