--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -1,8 +1,11 @@
+<ion-header>
+  <ion-toolbar>
+    <div style="margin: 0 1.5rem;" (click)="close()">
+      <img src="../../assets/left-arrow.svg" style="height: 1rem;">
+      <ion-label style="margin: 0 10px; color: #5D4B9D;">Voltar</ion-label>
+    </div>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
   <div #map></div>
 </ion-content>
-<ion-footer>
-  <ion-toolbar>
-    <ion-title (click)="close()">Voltar</ion-title>
-  </ion-toolbar>
-</ion-footer>
