--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <ion-header>
         <ion-toolbar>
           <ion-row *ngIf="userData?.objeto.img==''">
-            <img style="max-width: 5rem; height: 5rem; display: flex; border-radius: 50%; margin: 1rem; object-fit: cover;" src="../../assets/user.png">
+            <img style="max-width: 5rem; height: 5rem; display: flex; border-radius: 50%; margin: 1rem; object-fit: cover;" src="../assets/user.svg">
             <ion-title *ngIf="userData != null" class="hello">Olá, {{ userData?.objeto.nome }}</ion-title>
           </ion-row>
           <ion-row *ngIf="userData?.objeto.img !== null">
