--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -41,10 +41,10 @@
       <ion-label class="hello-user">Todos os locais</ion-label>
     </ion-item>
     <ion-item *ngFor="let ponto of pontos" routerDirection="root">
-      <img src="../../assets/local.png"/>
+      <img src="../../assets/map-target.svg">
       <ion-label class="label-ponto" (click)="visualizarPonto(ponto.id_ponto)">Visitar {{ ponto.nome }}</ion-label>
-      <ion-col style="max-width: 55px; padding: 0;" *ngIf="distancia">
-        <ion-label class="label-ponto" style="text-align: end;">{{ ponto.distancia }} km</ion-label>
+      <ion-col style="max-width: 60px; padding: 0;" *ngIf="distancia">
+        <ion-label class="label-ponto" style="text-align: end;">{{ ponto.distancia | number:'1.1-1' }} km</ion-label>
       </ion-col>
     </ion-item>
   </ion-list>
