--- a/src/app/store/store.page.html
+++ b/src/app/store/store.page.html
@@ -27,12 +27,14 @@
     <ion-col style="text-align: start;">PG Store</ion-col>
     <ion-col style="text-align: end; font-weight: normal;"><div (click)="extract()">Extrato de Pontos</div></ion-col>
   </ion-row>
-  <ion-row style="margin: 1rem; text-align: center; place-content: center;">
+  <ion-row style="margin: 1rem; place-content: center;">
     <ion-col (click)="modalDischarge(premio)" class="benefits" *ngFor="let premio of premios">
-      <img class="img-benefit" [src]="premio.img_produto"/>
+      <div>
+        <img class="img-benefit" [src]="premio.img_produto"/>
+      </div>
       <ion-label id="benefit">{{premio.nome}}</ion-label>
       <br>
-      <ion-label id="benefit">{{premio.valor}} pontos</ion-label>
+      <ion-label id="benefit" style="color: #00AAE2; font-weight: bolder;">{{ premio.valor }} pontos</ion-label>
     </ion-col>
   </ion-row>
 </ion-content>
